client side validation xss security try catch

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,15 +11,14 @@
               
               <div class="form-group">
                 <label for="name" class="clsformLabel">Username:</label>
-                <input type="text" class="form-control" id="logname" name="name" placeholder="Username"
-                    required="true">
+                <input type="text" class="form-control" id="logname" name="name" placeholder="Username" required="true" >
                     <span id="match"></span>
                 {{!-- <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span> --}}
               </div>
                 
               <div class="form-group">
                 <label for="password" class="clsformLabel">Password:</label>
-                <input type="password" class="form-control" id="logpassword" name="password" placeholder="Password" required="true" aria-describedby="passwordHelp">
+                <input type="password" class="form-control" id="logpassword" name="password" placeholder="Password" required="true" aria-describedby="passwordHelp" >
                 <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
             
